--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ header {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     margin: 0;
     padding: 0;
     grid-area: indicator;
@@ -269,7 +270,7 @@ progress {
     }
 
     header {
-        padding-left: 50px;
+        text-align: center;
     }
 
     article {
@@ -293,6 +294,7 @@ progress {
 
     .personal-info-item {
         height: 180px;
+        width: 310px;
     }
 
     .image-block {
