--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ header {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
     margin: 0;
     padding: 0;
     grid-area: indicator;
@@ -251,6 +250,10 @@ progress {
 }
 
 @media (max-width: 1199.98px) {
+    .indicator-wrapper {
+        align-items: center;
+    }
+
     .progress-bar {
         width: 600px;
         height: 10px;
